...
* created on 31-01-2021 09:25
*/

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun Homepage(homeState: HomeState) {
    val tag = homeState.tag
    val keyword = homeState.keyword
    val sortField = homeState.sortField
    val sortAscendingOrder = homeState.sortAscending

    val vaultRepository = LocalVaultRepository.current
    val viewModelFactory = remember(vaultRepository) {
...
                    }
                }
            )
        },
        floatingActionButton = {
            FloatingActionButton(
                modifier = Modifier.testTag("addCredential"),
                shape = MaterialTheme.shapes.large,
                containerColor = MaterialTheme.colorScheme.primary,
                contentColor = MaterialTheme.colorScheme.onPrimary,
                elevation = FloatingActionButtonDefaults.elevation(
                    defaultElevation = 0.dp,
                    pressedElevation = 2.dp,
...
