<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="credential_detail_screen_title">Credential details</string>
    <string name="credential_detail_untitled">Untitled credential</string>
    <string name="credential_detail_edit">Edit</string>
    <string name="credential_detail_username">Username</string>
    <string name="credential_detail_website">Website</string>
    <string name="credential_detail_notes">Notes</string>
    <string name="credential_detail_open">Open</string>
    <string name="credential_detail_delete">Delete credential</string>
    <string name="credential_detail_deleting">Deleting…</string>
</resources>
